.tekton/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wishlists
  labels:
    app: wishlists
spec:
  to:
    kind: Service
    name: wishlists
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
