.tekton/listener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-cd-listener
spec:
  to:
    kind: Service
    name: el-cd-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
